# LLM_Privacy

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: peer_reviewed_matrix.md
configs/: baseline.yaml  context_boundary.yaml  pii_redaction.yaml  ragshield_full.yaml  retrieval_sanitizer.yaml  tool_gate.yaml  tool_policy.yaml
docs/: cv_project_bullets.md  interview_talking_points.md  privacylens_deepseek_protocol.md  research_idea.md  saferag_deepseek_rejudge_protocol.md  saferag_gpt55_protocol.md  saferag_gpt5mini_protocol.md  saferag_silver_noise_deepseek_protocol.md  security_controls.md  tensor_trust_deepseek_protocol.md
reports/: data_quality.json  data_quality.md  evidence_results.json  evidence_summary.md  experiment_summaries.json  failure_analysis.md  failure_cases.md  interview_evidence.json  interview_evidence_report.md  privacylens_deepseek_audit.json  privacylens_deepseek_report.md  privacylens_deepseek_results.json  results.csv  results.md  saferag_deepseek_rejudge_audit.json  saferag_deepseek_rejudge_report.md  saferag_deepseek_rejudge_results.json  saferag_gpt5mini_audit.json  saferag_gpt5mini_report.md  saferag_gpt5mini_results.json  saferag_llm_pilot_analysis.md  saferag_llm_pilot_audit.json  saferag_llm_pilot_report.md  saferag_llm_pilot_summary.json  saferag_report.md  saferag_results.json  saferag_silver_noise_deepseek_audit.json  saferag_silver_noise_deepseek_report.md  saferag_silver_noise_deepseek_results.json  security_controls_report.md  security_controls_results.json  synthetic_gpt5mini_audit.json  (+7 more)
(+122 files in other folders)
