[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ragshield"
version = "0.1.0"
description = "Auditable red-blue evaluation prototype for adversarial retrieval in RAG systems."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Haojie Li" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
